--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+      Learn how to configure dd a non-root public URL by running `npm run build`.
     -->
     <title>Spotify DIY. The playlist</title>
   </head>
